--- a/sass/site/blog/blog-layouts/_blog-common.scss
+++ b/sass/site/blog/blog-layouts/_blog-common.scss
@@ -10,7 +10,7 @@
     margin-bottom: 1em;
 }
 
-.page .entry-header.ast-no-title {
+.ast-single-post .entry-header.ast-no-title {
 	margin-top: 0;
 	margin-bottom: 0;
 }
